--- a/css/index.css
+++ b/css/index.css
@@ -2495,3 +2495,10 @@ body {
   height: 220px;
   overflow: hidden;
 }
+#tu {
+  width: 15px;
+  height: 15px;
+  float: left;
+  margin-top: 5px;
+  cursor: pointer;
+}
