--- a/less/index.less
+++ b/less/index.less
@@ -689,4 +689,12 @@ body{
 	height:220px;
 	overflow:hidden;
 }
+#tu{
+	width:15px;
+	height:15px;
+	float:left;
+	margin-top: 5px;
+	cursor:pointer;
+}
+
 
